--- a/global_code_snippet.html
+++ b/global_code_snippet.html
@@ -60,10 +60,24 @@
           sjLogOutRequest.send();
       });
 
+
+
       // Menu
 
-      var links = '<a href="https://duda.co" target="_blank">Duda.co</a><a href="https://support.duda.co/hc/" target="_blank">Support Portal</a><a href="https://resources.duda.co/webinars" target="_blank">Webinars</a>';
-      $('#header-left').append('<div id="customNav">'+links+'</div>');
+      var links = '<a href="https://resources.duda.co/webinars" target="_blank">Webinars</a><a href="https://support.duda.co/hc/" target="_blank">Support Portal</a><a href="https://duda.co" target="_blank">Duda.co</a>';
+      $('#header-left').append('<div id="customNav" class="hidden">'+links+'</div>');
+
+      var hamburgerMenu = '<a href="#">Menu</a>';
+      $('#header-right').append('<div id="customMenu">'+hamburgerMenu+'</div>');
+
+      $('#customMenu a').click(function(e) {
+          $(this).toggleClass('active');
+          $('body').toggleClass('blocked');
+          $('#launcher').toggleClass('hidden');
+          $('#customNav').toggleClass('hidden');
+          e.preventDefault();
+      });
+
 
       //Homepage Hero effect
 			if (window.location.href.split('/').pop() === "") {
