Updates logout redirection

--- a/global_code_snippet.html
+++ b/global_code_snippet.html
@@ -9,8 +9,8 @@
 
 <script>
 
-  var skilljarDomain = 'https://university.getduda.com';
-  var idpLogoutEndpoint = 'https://university.getduda.com';
+  var skilljarDomain = 'https://education.duda.co';
+  var idpLogoutEndpoint = 'https://education.duda.co';
 
   //Hubspot customization
   if (typeof skilljarUser !=='undefined') {
