--- a/global_code_snippet.html
+++ b/global_code_snippet.html
@@ -49,22 +49,22 @@
 		$(document).ready(function() {
 
       // Logout Redirection
-      $('a.signout-link.sj-text-sign-out').attr('href','#');
-      $('a.signout-link.sj-text-sign-out').click(function() {
-          var sjLogOutRequest = new XMLHttpRequest();
-          var logOutUrl ='https://' + skilljarDomain + '/auth/logout?next=%2F';
-          sjLogOutRequest.open('GET', logOutUrl);
-          sjLogOutRequest.onreadystatechange = function () {
-              window.location = idpLogoutEndpoint;
-          };
-          sjLogOutRequest.send();
-      });
+      // $('a.signout-link.sj-text-sign-out').attr('href','#');
+      // $('a.signout-link.sj-text-sign-out').click(function() {
+      //     var sjLogOutRequest = new XMLHttpRequest();
+      //     var logOutUrl ='https://' + skilljarDomain + '/auth/logout?next=%2F';
+      //     sjLogOutRequest.open('GET', logOutUrl);
+      //     sjLogOutRequest.onreadystatechange = function () {
+      //         window.location = idpLogoutEndpoint;
+      //     };
+      //     sjLogOutRequest.send();
+      // });
 
 
 
       // Menu
 
-      var links = '<a href="https://resources.duda.co/webinars" target="_blank">Webinars</a><a href="https://support.duda.co/hc/" target="_blank">Support Portal</a><a href="https://duda.co" target="_blank">Duda.co</a>';
+      var links = '<a href="https://university.duda.co/page/certifications" target="_blank">Certifications</a><a href="https://resources.duda.co/webinars" target="_blank">Webinars</a><a href="https://support.duda.co/hc/" target="_blank">Support</a><a href="https://duda.co" target="_blank">Duda.co</a>';
       $('#header-left').append('<div id="customNav" class="hidden">'+links+'</div>');
 
       var hamburgerMenu = '<a href="#">Menu</a>';
