--- a/conversion_code_snippet.html
+++ b/conversion_code_snippet.html
@@ -1,9 +1,28 @@
 <script>
 var _hsq = window._hsq = window._hsq || [];
-if (typeof(skilljarCourse) !== 'undefined') {
- _hsq.push(['trackEvent', {
- id: '000009227248',
- value: null
- }]);
+courseIds = {
+ '3hx5mtmxdu9a5': '000009661390',
+ '3uoltg6ue982f': '000009661391',
+ '2ethzrqoaz2ky': '000009661392',
+ '20rse69hi3v17': '000009660769',
+ 's1v2g1omkf31': '000009661931',
+ '219qqi2ii5kft': '000009661932',
+ '3ohknqin6yzn3': '000009661408',
+ '39bktf0djl746': '000009661933',
+ '3blry9mci71ln': '000009661934',
+ '3jugbc70rsn8p': '000009661935',
+ '39lqcx9820xc3': '000009661936',
+ '3t4ggrttn3o54': '000009661937',
+ '2o1l0dl9mgcta': '000009661984',
+ '2l1fxbkducry0': '000009661449',
 }
+if (typeof(skilljarCourse) !== 'undefined') {
+ id = skilljarCourse.publishedCourseId;
+ if (courseIds.hasOwnProperty(id)) {
+ _hsq.push(['trackEvent', {
+ id: courseIds[id],
+ value: null
+ }]);
+ };
+};
 </script>
