--- a/conversion_code_snippet.html
+++ b/conversion_code_snippet.html
@@ -15,6 +15,14 @@ courseIds = {
  '3t4ggrttn3o54': '000009661937',
  '2o1l0dl9mgcta': '000009661984',
  '2l1fxbkducry0': '000009661449',
+ '1ckg157h9v9u7': '000009994715',
+ '1c67j2oluaa1v': '000010282599',
+ '33xuk5hvxxylx': '000010282600',
+ '275605xhiyve0': '000010283733',
+ '12b761gnpck6c': '000010282602',
+ '39hxtx7ul87ap': '000010283735',
+ '3c386x6c972h7': '000010355052',
+ '2jyy2nojo7j1b': '000010362453',
 }
 if (typeof(skilljarCourse) !== 'undefined') {
  id = skilljarCourse.publishedCourseId;
