--- a/global_code_snippet.html
+++ b/global_code_snippet.html
@@ -72,7 +72,7 @@
 
       // Menu
 
-      var links = '<a href="https://university.duda.co/page/certifications" target="_blank">Certifications</a><a href="https://resources.duda.co/webinars" target="_blank">Webinars</a><a href="https://support.duda.co/hc/" target="_blank">Support</a><a href="https://duda.co" target="_blank">Duda.co</a>';
+      var links = '<a href="https://university.duda.co/page/certifications" >Certifications</a><a href="https://resources.duda.co/webinars" target="_blank">Webinars</a><a class="lfte-link" href="https://university.duda.co/page/learn-from-the-experts">Learn From the Experts</a><a href="https://support.duda.co/hc/" target="_blank">Support</a><a href="https://duda.co" target="_blank">Duda.co</a>';
       $('#header-left').append('<div id="customNav" class="hidden">'+links+'</div>');
 
       var hamburgerMenu = '<a href="#">Menu</a>';
