--- a/course_completion_code_snippet.html
+++ b/course_completion_code_snippet.html
@@ -15,6 +15,14 @@ courseIds = {
  '3t4ggrttn3o54': '000009660772',
  '2o1l0dl9mgcta': '000009660774',
  '2l1fxbkducry0': '000009661985',
+ '1ckg157h9v9u7': '000009994675',
+ '1c67j2oluaa1v': '000010283732',
+ '33xuk5hvxxylx': '000010282601',
+ '275605xhiyve0': '000010283734',
+ '12b761gnpck6c': '000010282603',
+ '39hxtx7ul87ap': '000010282604',
+ '3c386x6c972h7': '000010354707',
+ '2jyy2nojo7j1b': '000010362125',
 }
 if (typeof(skilljarCourse) !== 'undefined') {
  id = skilljarCourse.publishedCourseId;
